@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o The new --stats-every option takes a time interval that controls how
+  often timing status updates are printed. It's intended to be used
+  when Nmap is run by another program as a subprocess. Thanks to
+  Aleksandar Petrinic for the initial implementation. [David]
+
 o [Ncat] The syntax accepted by the --allow, --deny, --allowfile, and
   --denyfile options is now the same as Nmap's target specifications.
   Additionally any errors in the allow or deny specifications are
